# cekanje

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  release-plz.toml  release.toml
.github/workflows/: audit.yml  ci.yml  release-plz.yml  release.yml
Formula/: cekanje.rb
docs/: SMOKE.md
scripts/: .env.example  publish_crates.sh  publish_homebrew.sh  test_release.sh
src/: client.rs  main.rs  menu.rs  notify.rs  persist.rs  preview.rs  rebuild.rs  reload.rs  restore.rs  serve.rs  state.rs  tmux.rs  transcript.rs
