[package]
name = "cekanje"
version = "0.1.1"
edition = "2024"
description = "tmux notifier daemon for Claude Code sessions: track every active session, surface a native popup when one needs attention, jump to its pane via fzf"
license = "MIT"
authors = ["abosnjakovic"]
repository = "https://github.com/abosnjakovic/cekanje"
homepage = "https://github.com/abosnjakovic/cekanje"
readme = "README.md"
keywords = ["tmux", "claude", "notification", "daemon", "fzf"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
axum = "0.7"
clap = { version = "4", features = ["derive"] }
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify-rust = "4"
